syntax = "proto3";

option csharp_namespace = "Starfish.GrpcService.Server";

package request_logger;

service RequestLogger {
  rpc Log (RequestDetailsRequest) returns (StatusResponse);
}

message RequestDetailsRequest {
  string method = 1;
  string url = 2;
  int32 processTime = 3;
  string clientId = 4;
  string utcDate = 5;
}

message StatusResponse {
  bool success = 1;
}
